13/12/2024 Début Inventory